# xrl_system

./: .env.example  .gitignore  README.md  build_dataset.py  compare_results.py  control.txt.acmi  evaluate_baseline.py  main.py  pyproject.toml  requirements.txt  run_experiment.py  train_lora.py
.claude/: settings.json  settings.local.json
configs/: prompt_strategies.yaml  sweep_example.yaml  variable_descriptions.yaml
data/: trajectory_log.csv
docs/: architecture.md  development.md  how_to_evaluate.md  implementation_plan.md  spec.md  usage.md
modules/: data_loader.py  dataset_builder.py  evaluator.py  inference_engine.py  llm_client.py  lora_trainer.py  mcts_xrl.py  prompt_template.py  sysllm.py  talktoagent.py  trajectory_logger.py
results/: compare_step150.json
