[project]
name = "xrl-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "accelerate",
    "datasets",
    "geographiclib",
    "gymnasium",
    "icecream",
    "jsbsim==1.1.6",
    "litellm>=1.80.0",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "peft",
    "pymap3d",
    "python-dotenv>=1.0.1",
    "setproctitle",
    "torch",
    "transformers",
    "trl",
    "wandb",
]
